FIX InputComboTable suggestions were not visible on phone

--- a/Facades/js/openui5.template.css
+++ b/Facades/js/openui5.template.css
@@ -19,6 +19,10 @@ pre.sf-dump .sf-dump-private, pre.sf-dump .sf-dump-public, pre.sf-dump .sf-dump-
 .sapUiUfdShellCntnt > .sapMIBar.sapMTB .sapMBtnIcon:before {font-size: 16px}
 .exf-context-popup .sapMPanelContent {border-bottom: 0 !important}
 
+/* sap.m.Input */
+/* fix for suggest-table being hidden the first time the phone-suggest-dialog opens 
+- regardless of being empty or not */
+.sapMDialog.sapMSuggestionsPopover .sapMInputSuggestionTableHidden {display: block !important}
 
 /* sap.m.Table */
 .sapMList.sapMListBGTranslucent.sapMListTblCnt {overflow-x: scroll}
